--- a/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
@@ -69,17 +69,24 @@
 			<div class="clear"></div>
 
 			<table width="100%" class="collection">
-				<tml:if condition="tmlform != null && !isEmptyValue(tmlform.items)">
+				<tml:if condition="tmlform != null && (!isEmptyValue(tmlform.items) || tmlform.type=='sql')">
 					<tml:then>
-						<tml:script>
-							itemNames = Packages.de.innovationgate.utils.WGUtils.deserializeCollection(tmlform.items, ",", true);
-						</tml:script>
-						<tr class="collection-title">
-							<tml:foreach type="itemvalue" item="itemNames" currentvalue="itemName">
-								<TD><B><tml:item name="itemName"/></B></TD>
-							</tml:foreach>
-						</tr>      
+						
 						<tml:foreach id="searchFE" sourcetag="searchResult" page="{pagecontrol_searchFEPage}" pagesize="{tmlform.pagesize}" filllastpage="false" linear="{tmlform.linear}" onlypublished="false">
+						
+							<tml:case isfirstloop="true">
+								<tml:script>
+									if(tmlform.type=="sql" && isEmptyValue(tmlform.items))
+										itemNames = content().getItemNames();
+									else itemNames = WGA.createList(tmlform.items, ",");
+								</tml:script>
+								<tr class="collection-title">
+									<tml:foreach type="itemvalue" item="itemNames" currentvalue="itemName">
+										<TD><B><tml:item name="itemName"/></B></TD>
+									</tml:foreach>
+								</tr>      
+							</tml:case>
+						
 				    		<tml:if condition="DBM.database(tmlform.db).isHierarchical">
 				    			<tml:then>
 								    <tml:include designdb="@ui" ref="tr">
