--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/db-info.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/db-info.tml
@@ -34,6 +34,7 @@
 
 		_info={
 			lastChanged : (_wgadb.hasFeature(_wgadb.FEATURE_LASTCHANGED) && _wgadb.getLastChanged() != null ? _wgadb.getLastChanged() : "(Not supported)"),
+			revision: _wgadb.getRevision(),
 			isCs: _wgadb.hasFeature(_wgadb.FEATURE_FULLCONTENTFEATURES),
 			title : _wgadb.getTitle(),
 			uuid : _wgadb.getUUID(),
@@ -134,6 +135,10 @@
 			(Patch Level <tml:script expression="_info.ddl_patch_level"/>)
 		</tml:case>
 	</div>
+	<div class="clear"></div>
+
+	<label>Revision:</label>
+	<div class="data"><tml:script expression="_info.revision"/></div>
 	<div class="clear"></div>
 		
 	<label>Last Updated:</label>
