#00005133: Admin client query browser may show only the first column if custom fields are used

--- a/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/tools/db-query/query-result.tml
@@ -78,7 +78,7 @@
 								<tml:script>
 									if(tmlform.type=="sql" && isEmptyValue(tmlform.items))
 										itemNames = content().getItemNames();
-									else itemNames = WGA.createList(tmlform.items, ",");
+									else itemNames = Packages.de.innovationgate.utils.WGUtils.deserializeCollection(tmlform.items, ",", true);
 								</tml:script>
 								<tr class="collection-title">
 									<tml:foreach type="itemvalue" item="itemNames" currentvalue="itemName">
