--- a/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/seo.tml
@@ -205,7 +205,7 @@
 							function getWords(selector){
 								var words = {};
 								var index=0;;
-								$(el).find(selector).not("style, script, nav *, sidebar *").contents()
+								$(el).find(selector).not(".WGA-Item-Edit, .WGA-Item-Edit *, WGA-Item-Value-Unencoded *, style, script, nav *, sidebar *").contents()
 									.filter(function () { return this.nodeType === 3; })
 									.each(function(){
 										var relevanz = 1;
@@ -221,7 +221,6 @@
 												//console.log(this, w,in_headings, index,relevanz); 
 											}
 											for(var i=0; i<w.length; i++){
-												//console.log(this, w, index);
 												var word = w[i].toLowerCase();
 												if(word.length<3 || stopwords.indexOf(word)>=0)
 													continue;
@@ -234,6 +233,7 @@
 													count: 1,
 													weight: relevanz
 												}
+												//console.log(this, word, words[word].count);
 											}
 										}				
 									});
