#00005134: NPE in page-settings user/group lookup

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/ldap-lookup.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/ldap-lookup.tml
@@ -89,7 +89,11 @@
 				    		}
 				    	</tml:script>
 				    </td>    
-				    <td><tml:script divider=", ">return _current.getAliasNames();</tml:script></td>
+				    <td>
+				    	<tml:case condition="_current.isUser()">
+				    		<tml:script divider=", ">return _current.getAliasNames();</tml:script>
+				    	</tml:case>
+				    </td>
 			   </tr> 
 			</tml:foreach>
 		</table>
