--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/page-settings/mode-user-lookup.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/page-settings/mode-user-lookup.tml
@@ -89,8 +89,12 @@
 			    			return "Group"
 			    		}
 			    	</tml:script>
-			    </td>    
-			    <td><tml:script divider=", ">return _current.getAliasNames();</tml:script></td>
+			    </td>
+			    <td>
+			    	<tml:case condition="_current.isUser()">
+			    		<tml:script divider=", ">return _current.getAliasNames();</tml:script>
+			    	</tml:case>
+			    </td>
 		   </tr> 
 		</tml:foreach>
 	</table>
