#00005143: CM RTF table/tr/td style improvements

--- a/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/item-editor/editors/rtf.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/action-panel/item-editor/editors/rtf.tml
@@ -381,7 +381,7 @@
 		<div id="rtf-table-form">
 			<table width="100%">
 				<tr id="rtf-table-format-tableStyles">
-					<td><tml:label key="rtf.table"/>:</td>
+					<td width="70"><tml:label key="rtf.table"/>:</td>
 					<td><div id="rtf-toolbar-table-tableStyles-button"></div></td>
 				</tr>
 				<tr id="rtf-table-format-trStyles">
