--- a/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/table.tml
+++ b/OpenWGA/plugins/cm/design/tml/javascript/rtftoolpanel/table.tml
@@ -156,24 +156,22 @@ var table_toolbar = new Ext.Toolbar("rtf-toolbar-table", [
 function tableStyleHandler(menu, ev){
 	BI.rtftoolbar.restoreEditorSelection();
 	var els = editor.getNearestTagsFromSelection(menu.el_type);
-	for(var i=0; i<els.length; i++)
-		els[i].className=menu.el_style;
+	for(var i=0; i<els.length; i++){
+		var el = Ext.fly(els[i]);
+		if(el){
+			if(menu.checked)
+				el.removeClass(menu.el_style);			
+			else el.addClass(menu.el_style);
+		}
+	}
 	BI.rtftoolbar.update();
 }
 
 var menu = new Ext.menu.Menu()
-menu.add(new Ext.menu.CheckItem({
-	text: "<tml:label key="rtf.format.none"/>",
-	group: 'tableformats',
-	el_type: "table",
-	el_style: "",
-	handler: tableStyleHandler
-}))
 for(var i=0; i<BI.rtftoolbar.tableStyleList.length; i++){
 	var style = BI.rtftoolbar.tableStyleList[i].split("|");
 	menu.add(new Ext.menu.CheckItem({
 		text: style[0],
-		group: 'tableformats',
 		el_type: "table",
 		el_style: style[1],
 		handler: tableStyleHandler
@@ -186,18 +184,10 @@ var tableStyleButton = new Ext.Button("rtf-toolbar-table-tableStyles-button", {
 })
 
 var menu = new Ext.menu.Menu()
-menu.add(new Ext.menu.CheckItem({
-	text: "<tml:label key="rtf.format.none"/>",
-	group: 'trformats',
-	el_type: "tr",
-	el_style: "",
-	handler: tableStyleHandler
-}))
 for(var i=0; i<BI.rtftoolbar.trStyleList.length; i++){
 	var style = BI.rtftoolbar.trStyleList[i].split("|");
 	menu.add(new Ext.menu.CheckItem({
 		text: style[0],
-		group: 'trformats',
 		el_type: "tr",
 		el_style: style[1],
 		handler: tableStyleHandler
@@ -210,18 +200,10 @@ var trStyleButton = new Ext.Button("rtf-toolbar-table-trStyles-button", {
 })
 
 var menu = new Ext.menu.Menu()
-menu.add(new Ext.menu.CheckItem({
-	text: "<tml:label key="rtf.format.none"/>",
-	group: 'tdformats',
-	el_type: "td",
-	el_style: "",
-	handler: tableStyleHandler
-}))
 for(var i=0; i<BI.rtftoolbar.tdStyleList.length; i++){
 	var style = BI.rtftoolbar.tdStyleList[i].split("|");
 	menu.add(new Ext.menu.CheckItem({
 		text: style[0],
-		group: 'tdformats',
 		el_type: "td",
 		el_style: style[1],
 		handler: tableStyleHandler
@@ -249,58 +231,70 @@ addUpdateListener(function(){
 	
 	if(BI.rtftoolbar.tableStyleList.length>0){
 		var ttag = editor.getNearestTagFromSelection("table");
-		tableStyleMenu.items.each(function(item){
-			if(ttag){		
-				if(item.el_style==ttag.className){
-					tableStyleButton.setText(item.text);
+		if(ttag){
+			var classes = [];
+			tableStyleButton.enable();
+			tableStyleMenu.items.each(function(item){
+				var class_mach = ttag.className.indexOf(item.el_style)>=0;
+				if(class_mach){
+					classes.push(item.text) 
 				}
-				item.setChecked(item.el_style==ttag.className)
-				tableStyleButton.enable();
-			}
-			else {
-				item.setChecked(false);
-				tableStyleButton.setText("<tml:label key="rtf.format.none"/>");
-				tableStyleButton.disable();
-			}
-		})
+				item.setChecked(class_mach)
+			})
+			if(classes.length)
+				tableStyleButton.setText(classes.join(", "))
+			else tableStyleButton.setText("<tml:label key="rtf.format.none"/>");
+		}
+		else{
+			tableStyleButton.disable();
+			tableStyleButton.setText("<tml:label key="rtf.style.none"/>");
+		}
 	}
 	else tableStyleButton.disable();
 
 	if(BI.rtftoolbar.trStyleList.length>0){
 		var ttag = editor.getNearestTagFromSelection("tr");
-		trStyleMenu.items.each(function(item){
-			if(ttag){		
-				if(item.el_style==ttag.className){
-					trStyleButton.setText(item.text);
+		if(ttag){
+			var classes = [];
+			trStyleButton.enable();
+			trStyleMenu.items.each(function(item){
+				var class_mach = ttag.className.indexOf(item.el_style)>=0;
+				if(class_mach){
+					classes.push(item.text) 
 				}
-				item.setChecked(item.el_style==ttag.className)
-				trStyleButton.enable();
-			}
-			else {
-				item.setChecked(false);
-				trStyleButton.setText("<tml:label key="rtf.format.none"/>");
-				trStyleButton.disable();
-			}
-		})
+				item.setChecked(class_mach)
+			})
+			if(classes.length)
+				trStyleButton.setText(classes.join(", "))
+			else trStyleButton.setText("<tml:label key="rtf.format.none"/>"); 
+		}
+		else{
+			trStyleButton.disable();
+			trStyleButton.setText("<tml:label key="rtf.style.none"/>");
+		}
 	}	
 	else trStyleButton.disable();
 	
 	if(BI.rtftoolbar.tdStyleList.length>0){
 		var ttag = editor.getNearestTagFromSelection("td");
-		tdStyleMenu.items.each(function(item){
-			if(ttag){		
-				if(item.el_style==ttag.className){
-					tdStyleButton.setText(item.text);
+		if(ttag){
+			var classes = [];
+			tdStyleButton.enable();
+			tdStyleMenu.items.each(function(item){
+				var class_mach = ttag.className.indexOf(item.el_style)>=0;
+				if(class_mach){
+					classes.push(item.text) 
 				}
-				item.setChecked(item.el_style==ttag.className)
-				tdStyleButton.enable();
-			}
-			else {
-				item.setChecked(false);
-				tdStyleButton.setText("<tml:label key="rtf.format.none"/>");
-				tdStyleButton.disable();
-			}
-		})
+				item.setChecked(class_mach)
+			})
+			if(classes.length)
+				tdStyleButton.setText(classes.join(", "))
+			else tdStyleButton.setText("<tml:label key="rtf.format.none"/>"); 
+		}
+		else{
+			tdStyleButton.disable();
+			tdStyleButton.setText("<tml:label key="rtf.style.none"/>");
+		}
 	}	
 	else tdStyleButton.disable();
 
