#00005146: CMM: improved styles for download list

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/download-list/css.tml
@@ -19,8 +19,8 @@
 		},
 		
 		".filename": {
-			//margin_left: 60,
-			"float": "left"
+			margin_left: 60,
+			//"float": "left"
 		},
 		
 		".filesize": {
