#00005166: Show complete url for "long requests" problems

--- a/OpenWGA/plugins/admin/design/tml/html/home/problems/longrequests.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/home/problems/longrequests.tml
@@ -29,9 +29,9 @@
 			reg.updateRegistry();
 			problems = reg.getProblems(Packages.de.innovationgate.wgpublisher.problems.LongRequestProblemType);
 			
-			if (sortBy == "uri") {
+			if (sortBy == "url") {
 				WGA.sortList(problems, function(a,b) {
-					return javaObject(a.getUri()).compareTo(b.getUri());
+					return javaObject(a.getUrl()).compareTo(b.getUrl());
 				});		
 			}
 			else if (sortBy == "times") {
@@ -54,7 +54,7 @@
 		<table class="collection" width="100%">
 			<tr class="collection-title">	
 				<td>
-					<a title="Sort by URI (descending)" href="<tml:url action="$setpsessionvar" param1="sortBy" param2="uri"/>">URI</a>
+					<a title="Sort by URL (descending)" href="<tml:url action="$setpsessionvar" param1="sortBy" param2="url"/>">URI</a>
 				</td>
 				<td>
 					<a title="Sort by times (descending)" href="<tml:url action="$setpsessionvar" param1="sortBy" param2="times"/>">Times exceeding duration</a>
@@ -75,12 +75,12 @@
 					<td>
 						<span title="<tml:script expression="problem.getUri()"/>">
 							<tml:script>
-							  var uri = problem.getUri();
-							  if (uri.length > 80) {
-							  	return uri.substring(0, 80) + "...";
+							  var url = problem.getUrl();
+							  if (url.length > 120) {
+							  	return url.substring(0, 120) + "...";
 							  }
 							  else {
-							  	return uri; 
+							  	return url; 
 							  }
 							</tml:script>
 						</span>
