--- a/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
+++ b/OpenWGA/plugins/admin/design/scripts/css/wgadmin.css
@@ -174,6 +174,10 @@ table tr.collection-title td{
 	padding-bottom: 0px;
 	color: #96A1B9;
 }
+table tr.collection-title td a.selected{
+	font-weight: bold;
+	color: red;
+}
 
 legend{
 	font-weight: bold;
