Added "symbol" to jquery-tree

--- a/OpenWGA/plugins/afw/design/tml/stylesheet/jquery-tree.tml
+++ b/OpenWGA/plugins/afw/design/tml/stylesheet/jquery-tree.tml
@@ -76,6 +76,9 @@
 					text_overflow: "ellipsis",
 					".link-text": {
 						margin_left: 20
+					},
+					".symbol": {
+						float: "right"
 					}
 				}
 			},
